<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_height="match_parent"
    android:background="@drawable/edittext_bg"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold" />

            <EditText

                android:id="@+id/email_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="3dp"
                android:hint="@string/email"
                android:background="@color/white"
                android:minHeight="48dp"
                tools:ignore="RtlHardcoded,RtlSymmetry,TextFields,VisualLintTextFieldSize"
                android:autofillHints="" />

            <EditText

                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:paddingLeft="3dp"
                android:background="@color/white"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                tools:ignore="Autofill,RtlHardcoded,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/log_in"
                android:background="@drawable/buttondesign"
                android:textColor="@color/white"
                android:textAppearance="?android:textAppearanceLarge"
                app:cornerRadius="20dp"
                tools:ignore="VisualLintButtonSize" />


            <TextView
                android:id="@+id/signup_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/don_t_have_an_account_sign_up_here"
                android:textColor="#546E7A" />

        </LinearLayout>

    </ScrollView>




</LinearLayout>

