<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="190dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="2dp"
        android:background="#FBEDED"
        >

        <TextView
            android:id="@+id/Category_expense_dash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:fontFamily="@font/urf"
            android:layout_margin="5dp"
            android:gravity="center"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:id="@+id/Ammount_expense_dash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="@font/ubf"
            android:gravity="center"
            android:text="@string/ammount"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="#EF5350" />

        <TextView
            android:id="@+id/Date_expense_dash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/date"
            android:fontFamily="@font/urf"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#1B08CD" />

    </LinearLayout>

</androidx.cardview.widget.CardView>