<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent"
        android:background="#E3F2FD"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ammount_edt"
                        android:textColor="#0B0A0A"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceMedium">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    >

                    <EditText
                        android:id="@+id/ammount_edt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,
                        VisualLintTextFieldSize,VisualLintTextFieldSize"
                        android:autofillHints=""
                        android:inputType="number"
                        android:singleLine="true"
                        android:hint="@string/_0">
                    </EditText>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/date_edt"
                        android:textColor="#0C0C0C"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceMedium">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/date_edt"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="Select Date"
                        android:focusableInTouchMode="true"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:ignore="Autofill,HardcodedText,TextFields,TouchTargetSizeCheck,VisualLintTextFieldSize,TextSizeCheck">

                    </EditText>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textColor="#070707"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceMedium">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2">

                    <Spinner
                        android:id="@+id/category_edt"
                        android:layout_width="225dp"
                        android:layout_height="45dp"
                        android:popupBackground="@color/white"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceMedium"
                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

                    </Spinner>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/note"
                        android:textColor="#070707"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceMedium">

                    </TextView>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="13dp"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/Note_edt"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:ems="10"
                        android:gravity="top"
                        android:hint="@string/type_your_notes_here"
                        android:inputType="textCapSentences|textMultiLine"
                        tools:ignore="Autofill,VisualLintTextFieldSize" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:baselineAligned="true">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="2"
                    android:gravity="center">

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/delete"
                        android:background="@drawable/buttondesign"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceMedium"/>



                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:layout_weight="2">

                    <Button
                        android:id="@+id/btnUpdate"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/update"
                        android:background="@drawable/buttondesign"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textAppearance="?android:textAppearanceMedium"/>


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>