<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="1dp"
    android:elevation="1dp"
    android:layout_margin="2dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:baselineAligned="false"
        android:background="#99E8FEFF">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/category_image_income"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="43dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="42dp"
                android:layout_marginBottom="6dp" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/category_txt_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/category"
                android:textAlignment="center"
                android:fontFamily="@font/ubf"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notes_txt_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/category_txt_income"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/note"
                android:fontFamily="@font/urf"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#686565"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/ammount_txt_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_1000"
                android:fontFamily="@font/ubf"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#689F38"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_txt_income"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ammount_txt_income"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_6_june_2023"
                android:fontFamily="@font/urf"
                android:textAlignment="center"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/purple_700"
                android:textStyle="bold" />


        </RelativeLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>